--- a/style.css
+++ b/style.css
@@ -775,6 +775,20 @@ section {
   }
 }
 
+@media (max-width: 1120px) {
+  .gallery .gallery-info .col {
+    width: 40%;
+    margin: 1.5em;
+  }
+}
+
+@media (max-width: 757px) {
+  .gallery .gallery-info .col .desc {
+    width: 300px;
+    height: 20px;
+  }
+}
+
 @media (max-width: 900px) {
   #learning {
     margin-top: 35em;
@@ -789,7 +803,7 @@ section {
     font-size: 1em;
   }
   .gallery .gallery-info .col {
-    width: 40%;
+    width: 50%;
     margin: 1.5em;
   }
   .about-info .timeline .col {
